update controller, model

--- a/index.html
+++ b/index.html
@@ -167,6 +167,20 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script src="/Customer/JS/main.js"></script>
+    <!-- Axios -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js"
+      integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <!-- Model -->
+    <script src="./App/models/product.js"></script>
+    <!-- Controller -->
+    <script src="./App/controller/controller.js"></script>
+    <!-- service -->
+    <script src="./App/services/productServ.js"></script>
+    <!-- Main JS -->
+    <script src="./Customer/JS/customer.js"></script>
   </body>
 </html>
