--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="/Asset/css/main.css" />
+    <link rel="stylesheet" href="Asset/css/main.css" />
   </head>
   <body>
     <nav class="nav">
@@ -36,7 +36,7 @@
       </div>
       <ul class="nav-list">
         <li>
-          <a href="/Admin/admin.html"
+          <a href="./Admin/admin.html"
             ><i class="fas fa-home fa-xl mb-1"></i><br />Admin</a
           >
         </li>
