update customer source, cart , responsive

--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -281,21 +281,15 @@
       <section class="footer2">
         <div class="container-footer">
           <div class="row">
-            <div class="colmobile col-6">
-              <h6>
-                <i
-                  class="fa-lg fa-solid fa-robot me-3"
-                  style="margin-right: 30px"
-                ></i
-                >Cyber Phone
-              </h6>
+            <div class="colmobile col-lg-6">
+              <h6><i class="fa-lg fa-solid fa-robot me-3"></i>Cyber Phone</h6>
               <p>
                 We pride ourselves on our efficiency and hard work, but most of
                 all our ability to source you the best quality and best value
                 products and devices in the market.
               </p>
             </div>
-            <div class="colmobile col-2">
+            <div class="colmobile col-sm-4 col-lg-2">
               <!-- Links -->
               <h6>Brands</h6>
               <p>
@@ -311,7 +305,7 @@
                 <a href="#" class="text-reset">Oppo</a>
               </p>
             </div>
-            <div class="colmobile col-2">
+            <div class="colmobile col-sm-4 col-lg-2">
               <!-- Links -->
               <h6>Useful links</h6>
               <p>
@@ -327,7 +321,7 @@
                 <a href="#" class="text-reset">Help</a>
               </p>
             </div>
-            <div class="colmobile col-2">
+            <div class="colmobile col-sm-4 col-lg-2">
               <!-- Links -->
               <h6>Contact</h6>
               <p><i class="fas fa-home me-3"></i> Da Nang, Thanh Khe, VN</p>
