--- a/index.html
+++ b/index.html
@@ -46,13 +46,122 @@
           >
         </li>
         <li>
-          <a href="#"
+          <a href="#" data-toggle="modal" data-target="#cartModal"
             ><i class="fa-solid fa-xl fa-shopping-cart"></i><br />Cart</a
           >
         </li>
       </ul>
     </nav>
-    <div class="customer_content bg-white"></div>
+    <!------Carousel------>
+    <div
+      id="carouselExampleIndicators"
+      class="carousel slide"
+      data-ride="carousel"
+    >
+      <ol class="carousel-indicators">
+        <li
+          data-target="#carouselExampleIndicators"
+          data-slide-to="0"
+          class="active"
+        ></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            class="d-block w-100"
+            src="https://images.fpt.shop/unsafe/fit-in/1200x300/filters:quality(90):fill(white)/fptshop.com.vn/Uploads/Originals/2024/4/5/638479117009571678_F-C1_1200x300.png"
+            alt="First slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="https://images.fpt.shop/unsafe/fit-in/1200x300/filters:quality(90):fill(white)/fptshop.com.vn/Uploads/Originals/2024/4/10/638483432949197971_F-C1_1200x300@2x.png"
+            alt="Second slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="https://images.fpt.shop/unsafe/fit-in/1200x300/filters:quality(90):fill(white)/fptshop.com.vn/Uploads/Originals/2024/3/22/638466965962807850_F-C1_1200x300.png"
+            alt="Third slide"
+          />
+        </div>
+      </div>
+      <a
+        class="carousel-control-prev"
+        href="#carouselExampleIndicators"
+        role="button"
+        data-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#carouselExampleIndicators"
+        role="button"
+        data-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+    <div class="customer_service bg-white">
+      <div>
+        <select id="filterType" class="custom_select">
+          <option value="all">Tất cả</option>
+          <option value="iphone">iPhone</option>
+          <option value="samsung">Samsung</option>
+        </select>
+      </div>
+      <div class="customer_content d-flex flex-wrap"></div>
+    </div>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="cartModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="cartModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="cartModalLabel">Your Cart</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body" id="cartBody"></div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary" onclick="checkout()">
+              Checkout
+            </button>
+            <button type="button" class="btn btn-danger" onclick="clearCart()">
+              Clear Cart
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-------------- Footer -------------->
     <footer class="footer">
@@ -84,21 +193,15 @@
       <section class="footer2">
         <div class="container-footer">
           <div class="row">
-            <div class="colmobile col-6">
-              <h6>
-                <i
-                  class="fa-lg fa-solid fa-robot me-3"
-                  style="margin-right: 30px"
-                ></i
-                >Cyber Phone
-              </h6>
+            <div class="colmobile col-lg-6">
+              <h6><i class="fa-lg fa-solid fa-robot me-3"></i>Cyber Phone</h6>
               <p>
                 We pride ourselves on our efficiency and hard work, but most of
                 all our ability to source you the best quality and best value
                 products and devices in the market.
               </p>
             </div>
-            <div class="colmobile col-2">
+            <div class="colmobile col-sm-4 col-lg-2">
               <!-- Links -->
               <h6>Brands</h6>
               <p>
@@ -114,7 +217,7 @@
                 <a href="#" class="text-reset">Oppo</a>
               </p>
             </div>
-            <div class="colmobile col-2">
+            <div class="colmobile col-sm-4 col-lg-2">
               <!-- Links -->
               <h6>Useful links</h6>
               <p>
@@ -130,7 +233,7 @@
                 <a href="#" class="text-reset">Help</a>
               </p>
             </div>
-            <div class="colmobile col-2">
+            <div class="colmobile col-sm-4 col-lg-2">
               <!-- Links -->
               <h6>Contact</h6>
               <p><i class="fas fa-home me-3"></i> Da Nang, Thanh Khe, VN</p>
